--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,15 @@
 body{
     background-color: #f6f7f8;
     font-family: "Inter", sans-serif;
+    
 }
 
 header{
+  width: 80%;
     display: flex;
     flex-direction: row;
     align-self: center;
     margin: 0 auto;
-    width: 80%;
     border-bottom: 1px solid rgba(128, 128, 128, 0.2);
     justify-content: space-between;
 }
@@ -65,8 +66,66 @@ header{
 
 .weather-detailed-info{
   display: grid;
-  grid-template-columns: 80px 80px;
-  gap: 3;
+  grid-template-columns: 1fr 1fr;
+  gap: 3px;
   background-color: white;
   border: gray;
+  padding: 20px;
 }
+
+main{
+  width: 80%;
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  margin: 0 auto;
+}
+
+.main-weather{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 100px;
+}
+
+#location{
+  font-size: 25px;
+  font-weight: bold;
+}
+
+#day-time{
+  font-size: 13px;
+  color: gray;
+}
+
+.temperature-more-info{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: white;
+  border: none;
+  border-radius: 5px;
+  padding: 20px;
+  gap: 80px;
+}
+
+.temperature-more-detailed-info{
+  width: 310px;
+}
+
+#temperature-info{
+  color: gray;
+}
+
+#temperature{
+  font-size: 50px;
+  font-weight: bold;
+  margin: 0;
+}
+
+#weather-img{
+  width: 150px;
+  height: 150px;
+  object-fit: cover;
+}
+
