--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,7 @@ header{
     display: flex;
     flex-direction: row;
     gap: 15px;
+    align-items: center;
 }
 
 .header-right{
@@ -57,6 +58,15 @@ header{
   outline: none;
 }
 
+#submit-button{
+  border: none;
+  background-color: #e8eaed;
+  padding: 10px;
+  width: 80px;
+  height: 30px;
+  border-radius: 5px;
+}
+
 .temp-button{
     background-color: #13a4ec;
     height: 20px;
@@ -68,15 +78,26 @@ header{
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 3px;
-  background-color: white;
   border: gray;
   padding: 20px;
+  row-gap: 20px;
+  column-gap: 20px;
+  margin-top: 108px;
+  border-radius: 10px;
+}
+
+.weather-detailed-info-box{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  padding: 15px 0px 15px 10px;
 }
 
 main{
   width: 80%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-self: center;
   margin: 0 auto;
 }
@@ -102,11 +123,12 @@ main{
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  background-color: white;
   border: none;
   border-radius: 5px;
   padding: 20px;
   gap: 80px;
+  border-radius: 10px;
+  margin-top: 50px;
 }
 
 .temperature-more-detailed-info{
@@ -123,9 +145,73 @@ main{
   margin: 0;
 }
 
-#weather-img{
-  width: 150px;
-  height: 150px;
-  object-fit: cover;
+.units-info{
+  font-size: 18px;
+  font-weight: bold;
 }
 
+.units-name{
+  font-size: 18px;
+  color: gray;
+  font-weight: bold;
+}
+
+.weather-info{
+  margin-top: 95px;
+}
+
+.weekly-forecast-box{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  margin-top: 50px;
+}
+
+.weekly-forecast-text{
+  font-weight: bold;
+  font-size: 20px;
+}
+
+.week-days-forecast{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 20px;
+}
+
+.week-days-forecast-box{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.day-of-the-week{
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.day-of-the-week-weather-image{
+  width: 150px;
+  height: 150px;
+}
+
+.maximum-temperature{
+  font-size: 20px;
+  font-weight: bold;
+  display: inline;
+}
+
+.minimum-temperature{
+  font-size: 14px;
+  color: #617c89;
+  display: inline;
+}
+
+.max-min-temperature{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+}
