--- a/styles.css
+++ b/styles.css
@@ -1,45 +1,40 @@
-body{
-    background-color: #f6f7f8;
-    font-family: "Inter", sans-serif;
-    
+body {
+  background-color: #f6f7f8;
+  font-family: "Inter", sans-serif;
+
 }
 
-header{
+header {
   width: 80%;
-    display: flex;
-    flex-direction: row;
-    align-self: center;
-    margin: 0 auto;
-    border-bottom: 1px solid rgba(128, 128, 128, 0.2);
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-self: center;
+  margin: 0 auto;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+  justify-content: space-between;
 }
 
-.logo{
-    width: 60px;
-    height: 60px;
+.logo {
+  width: 60px;
+  height: 60px;
 }
 
-.header-left{
-    display: flex;
-    flex-direction: row;
-    gap: 15px;
-    align-items: center;
-}
-
-.header-right{
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
+.header-left {
+  display: flex;
+  flex-direction: row;
+  gap: 15px;
+  align-items: center;
 }
 
 .search-input {
   width: 100%;
   max-width: 400px;
-  background-color: #f1f3f4; /* light grey */
+  background-color: #f1f3f4;
+  /* light grey */
   border: none;
   border-radius: 8px;
-  padding: 8px 12px 8px 32px; /* left space for search icon */
+  padding: 8px 12px 8px 32px;
+  /* left space for search icon */
   font-size: 14px;
   font-weight: 400;
   color: #111618;
@@ -54,27 +49,37 @@ header{
 }
 
 .search-input:focus {
-  background-color: #e8eaed; /* subtle hover/focus effect */
+  background-color: #e8eaed;
+  /* subtle hover/focus effect */
   outline: none;
 }
 
-#submit-button{
+#submit-button {
   border: none;
   background-color: #e8eaed;
   padding: 10px;
-  width: 80px;
-  height: 30px;
   border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  transition: box-shadow 0.1s, background-color 0.1s;
 }
 
-.temp-button{
-    background-color: #13a4ec;
-    height: 20px;
-    border: none;
-    width: 55px;
+#submit-button:hover{
+  box-shadow:  0px 0px 5px 1px rgba(0, 0, 0, 0.1);
 }
 
-.weather-detailed-info{
+#submit-button:active{
+  background-color: white;
+}
+
+.temp-button {
+  background-color: #13a4ec;
+  height: 20px;
+  border: none;
+  width: 55px;
+}
+
+.weather-detailed-info {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 3px;
@@ -86,7 +91,7 @@ header{
   border-radius: 10px;
 }
 
-.weather-detailed-info-box{
+.weather-detailed-info-box {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -94,7 +99,7 @@ header{
   padding: 15px 0px 15px 10px;
 }
 
-main{
+main {
   width: 80%;
   display: flex;
   flex-direction: column;
@@ -102,23 +107,23 @@ main{
   margin: 0 auto;
 }
 
-.main-weather{
+.main-weather {
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 100px;
 }
 
-#location{
+#location {
   font-size: 25px;
   font-weight: bold;
 }
 
-#day-time{
+#day-time {
   font-size: 13px;
   color: gray;
 }
 
-.temperature-more-info{
+.temperature-more-info {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -131,36 +136,36 @@ main{
   margin-top: 50px;
 }
 
-.temperature-more-detailed-info{
+.temperature-more-detailed-info {
   width: 310px;
 }
 
-#temperature-info{
+#temperature-info {
   color: gray;
 }
 
-#temperature{
+#temperature {
   font-size: 50px;
   font-weight: bold;
   margin: 0;
 }
 
-.units-info{
+.units-info {
   font-size: 18px;
   font-weight: bold;
 }
 
-.units-name{
+.units-name {
   font-size: 18px;
   color: gray;
   font-weight: bold;
 }
 
-.weather-info{
+.weather-info {
   margin-top: 95px;
 }
 
-.weekly-forecast-box{
+.weekly-forecast-box {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
@@ -168,12 +173,12 @@ main{
   margin-top: 50px;
 }
 
-.weekly-forecast-text{
+.weekly-forecast-text {
   font-weight: bold;
   font-size: 20px;
 }
 
-.week-days-forecast{
+.week-days-forecast {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -181,37 +186,160 @@ main{
   gap: 20px;
 }
 
-.week-days-forecast-box{
+.week-days-forecast-box {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.day-of-the-week{
+.day-of-the-week {
   font-size: 16px;
   font-weight: bold;
 }
 
-.day-of-the-week-weather-image{
+.day-of-the-week-weather-image {
   width: 150px;
   height: 150px;
 }
 
-.maximum-temperature{
+.maximum-temperature {
   font-size: 20px;
   font-weight: bold;
   display: inline;
 }
 
-.minimum-temperature{
+.minimum-temperature {
   font-size: 14px;
   color: #617c89;
   display: inline;
 }
 
-.max-min-temperature{
+.max-min-temperature {
   display: flex;
   flex-direction: row;
   align-items: center;
   gap: 10px;
 }
+
+@media (max-width: 575.98px) {
+  header {
+    max-width: 80%;
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    margin: 0 auto;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+    justify-content: space-between;
+  }
+
+  main {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .main-weather {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 80%;
+    justify-content: center;
+  }
+
+  .weekly-forecast-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 50px;
+  }
+
+  .week-days-forecast {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+  }
+
+  .header-left {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .temperature-more-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    border-radius: 5px;
+    padding: 20px;
+    gap: 80px;
+    border-radius: 10px;
+    margin-top: 50px;
+  }
+
+  .temperature-more-detailed-info {
+    max-width: 80%;
+  }
+
+  .weather-detailed-info {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    border: gray;
+    padding: 20px;
+    row-gap: 20px;
+    column-gap: 20px;
+    margin-top: 108px;
+    border-radius: 10px;
+    width: 80%;
+  }
+
+  .weather-info {
+    margin-top: 10px;
+
+  }
+
+  .search-input {
+
+    min-width: 70px;
+    background-color: #f1f3f4;
+    /* light grey */
+    border: none;
+    border-radius: 8px;
+    padding: 8px 12px 8px 32px;
+    /* left space for search icon */
+    font-size: 14px;
+    font-weight: 400;
+    color: #111618;
+    line-height: 1.5;
+    outline: none;
+    transition: background-color 0.2s ease;
+    height: 30px;
+  }
+
+  .search-input::placeholder {
+    color: #617c89;
+  }
+
+  .search-input:focus {
+    background-color: #e8eaed;
+    /* subtle hover/focus effect */
+    outline: none;
+  }
+
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {}
+
+@media (min-width: 1200px) {}
