--- a/styles.css
+++ b/styles.css
@@ -20,15 +20,24 @@ header {
 }
 
 .header-left {
+  width: 90%;
+  max-width: 100%;
   display: flex;
   flex-direction: row;
   gap: 15px;
   align-items: center;
+  justify-content: space-between;
+}
+
+.header-left-logo{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
 }
 
 .search-input {
-  width: 100%;
-  max-width: 400px;
+  width: 500px;
   background-color: #f1f3f4;
   /* light grey */
   border: none;
