--- a/styles.css
+++ b/styles.css
@@ -93,7 +93,8 @@ header {
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   align-items: center;
   justify-content: space-between;
-  width: 1400px;
+  width: 1000px;
+  max-width: 1200px;
   background-color: #f1f3f4;
   padding: 20px;
   cursor: pointer;
@@ -214,6 +215,8 @@ main {
 .weekly-forecast-text {
   font-weight: bold;
   font-size: 20px;
+  text-align: center;
+  margin: auto;
 }
 
 .week-days-forecast {
@@ -222,6 +225,7 @@ main {
   align-items: center;
   justify-content: flex-start;
   gap: 20px;
+  margin-top: 10px;
 }
 
 .week-days-forecast-box {
