--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ header {
   justify-content: space-between;
 }
 
-.header-left-logo{
+.header-left-logo {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -72,15 +72,15 @@ header {
   transition: box-shadow 0.1s, background-color 0.1s;
 }
 
-#submit-button:hover{
-  box-shadow:  0px 0px 5px 1px rgba(0, 0, 0, 0.1);
+#submit-button:hover {
+  box-shadow: 0px 0px 5px 1px rgba(0, 0, 0, 0.1);
 }
 
-#submit-button:active{
+#submit-button:active {
   background-color: white;
 }
 
-.results-box{
+.results-box {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -88,7 +88,7 @@ header {
   max-width: 90%;
 }
 
-.results{
+.results {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
   align-items: center;
@@ -101,11 +101,11 @@ header {
   transition: background-color 0.2s;
 }
 
-.results:hover{
+.results:hover {
   background-color: #ffffff;
 }
 
-.country-picture{
+.country-picture {
   width: 50px;
 }
 
@@ -161,7 +161,7 @@ main {
   color: gray;
 }
 
-#use-location-btn{
+#use-location-btn {
   background-color: #13a4ec;
   color: #ffffff;
   padding: 10px 20px;
@@ -171,11 +171,11 @@ main {
   margin: auto;
 }
 
-#use-location-btn:hover{
+#use-location-btn:hover {
   box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.1)
 }
 
-#use-location-btn:active{
+#use-location-btn:active {
   background-color: #0e6d9c;
 }
 
@@ -282,7 +282,7 @@ main {
 
 @media (max-width: 575.98px) {
   header {
-    max-width: 80%;
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-self: center;
@@ -369,7 +369,7 @@ main {
 
   .search-input {
 
-    min-width: 70px;
+    max-width: 200px;
     background-color: #f1f3f4;
     /* light grey */
     border: none;
@@ -395,10 +395,384 @@ main {
     outline: none;
   }
 
+  #location-btn-box {
+    position: absolute;
+    top: 50%;
+    left: 200px;
+    bottom: 50%;
+  }
+
 }
 
-@media (min-width: 768px) and (max-width: 991.98px) {}
+@media (min-width: 576px) and (max-width: 767px) {
+  header {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-self: center;
+    margin: 0 auto;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+    justify-content: space-between;
+  }
 
-@media (min-width: 992px) and (max-width: 1199.98px) {}
+  main {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .main-weather {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    max-width: 80%;
+    justify-content: center;
+  }
+
+  .weekly-forecast-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 50px;
+  }
+
+  .week-days-forecast {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+  }
+
+  .header-left {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+  }
+
+  .temperature-more-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    border-radius: 5px;
+    padding: 20px;
+    gap: 80px;
+    border-radius: 10px;
+    margin-top: 50px;
+  }
+
+  .temperature-more-detailed-info {
+    max-width: 80%;
+  }
+
+  .weather-detailed-info {
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+    border: gray;
+    padding: 20px;
+    row-gap: 20px;
+    column-gap: 20px;
+    margin-top: 108px;
+    border-radius: 10px;
+    width: 80%;
+  }
+
+  .weather-info {
+    margin-top: 10px;
+
+  }
+
+  .search-input {
+
+    max-width: 200px;
+    background-color: #f1f3f4;
+    /* light grey */
+    border: none;
+    border-radius: 8px;
+    padding: 8px 12px 8px 32px;
+    /* left space for search icon */
+    font-size: 14px;
+    font-weight: 400;
+    color: #111618;
+    line-height: 1.5;
+    outline: none;
+    transition: background-color 0.2s ease;
+    height: 30px;
+  }
+
+  .search-input::placeholder {
+    color: #617c89;
+  }
+
+  .search-input:focus {
+    background-color: #e8eaed;
+    /* subtle hover/focus effect */
+    outline: none;
+  }
+
+  #location-btn-box {
+    position: absolute;
+    top: 50%;
+    left: 200px;
+    bottom: 50%;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 991.98px) {
+  header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    margin: 0 auto;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+    justify-content: space-between;
+  }
+
+  main {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .main-weather {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .weekly-forecast-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 50px;
+  }
+
+  .week-days-forecast {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+  }
+
+  .header-left {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+
+  }
+
+  .temperature-more-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    border-radius: 5px;
+    padding: 20px;
+    gap: 80px;
+    border-radius: 10px;
+    margin-top: 50px;
+  }
+
+  .temperature-more-detailed-info {
+    max-width: 80%;
+  }
+
+  .weather-detailed-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3px;
+    border: gray;
+    padding: 20px;
+    row-gap: 20px;
+    column-gap: 20px;
+    margin-top: 108px;
+    border-radius: 10px;
+    width: 80%;
+  }
+
+  .weather-info {
+    margin-top: 10px;
+
+  }
+
+  .search-input {
+
+    max-width: 200px;
+    background-color: #f1f3f4;
+    /* light grey */
+    border: none;
+    border-radius: 8px;
+    padding: 8px 12px 8px 32px;
+    /* left space for search icon */
+    font-size: 14px;
+    font-weight: 400;
+    color: #111618;
+    line-height: 1.5;
+    outline: none;
+    transition: background-color 0.2s ease;
+    height: 30px;
+  }
+
+  .search-input::placeholder {
+    color: #617c89;
+  }
+
+  .search-input:focus {
+    background-color: #e8eaed;
+    /* subtle hover/focus effect */
+    outline: none;
+  }
+
+  #location-btn-box {
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    bottom: 50%;
+  }
+}
+
+@media (min-width: 992px) and (max-width: 1199.98px) {
+  header {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    margin: 0 auto;
+    border-bottom: 1px solid rgba(128, 128, 128, 0.2);
+    justify-content: space-between;
+  }
+
+  main {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+  }
+
+  .main-weather {
+    display: flex;
+    flex-direction: row;
+    gap: 10px;
+    width: 100%;
+    justify-content: center;
+  }
+
+  .weekly-forecast-box {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    margin-top: 50px;
+  }
+
+  .week-days-forecast {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+  }
+
+  .header-left {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    width: 100%;
+
+  }
+
+  .temperature-more-info {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: none;
+    border-radius: 5px;
+    padding: 20px;
+    gap: 80px;
+    border-radius: 10px;
+    margin-top: 50px;
+  }
+
+  .temperature-more-detailed-info {
+    max-width: 80%;
+  }
+
+  .weather-detailed-info {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 3px;
+    border: gray;
+    padding: 20px;
+    row-gap: 20px;
+    column-gap: 20px;
+    margin-top: 108px;
+    border-radius: 10px;
+    width: 80%;
+  }
+
+  .weather-info {
+    margin-top: 10px;
+
+  }
+
+  .search-input {
+
+    max-width: 200px;
+    background-color: #f1f3f4;
+    /* light grey */
+    border: none;
+    border-radius: 8px;
+    padding: 8px 12px 8px 32px;
+    /* left space for search icon */
+    font-size: 14px;
+    font-weight: 400;
+    color: #111618;
+    line-height: 1.5;
+    outline: none;
+    transition: background-color 0.2s ease;
+    height: 30px;
+  }
+
+  .search-input::placeholder {
+    color: #617c89;
+  }
+
+  .search-input:focus {
+    background-color: #e8eaed;
+    /* subtle hover/focus effect */
+    outline: none;
+  }
+
+  #location-btn-box {
+    position: absolute;
+    top: 50%;
+    left: 45%;
+    bottom: 50%;
+  }
+}
 
 @media (min-width: 1200px) {}
