--- a/styles.css
+++ b/styles.css
@@ -398,7 +398,7 @@ main {
   #location-btn-box {
     position: absolute;
     top: 50%;
-    left: 200px;
+    left: 40%px;
     bottom: 50%;
   }
 
