--- a/styles.css
+++ b/styles.css
@@ -94,7 +94,7 @@ header {
   align-items: center;
   justify-content: space-between;
   width: 1000px;
-  max-width: 1200px;
+  max-width: 80%;
   background-color: #f1f3f4;
   padding: 20px;
   cursor: pointer;
@@ -284,7 +284,7 @@ main {
   header {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-self: center;
     margin: 0 auto;
     border-bottom: 1px solid rgba(128, 128, 128, 0.2);
@@ -402,13 +402,34 @@ main {
     bottom: 50%;
   }
 
+  .results-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 90%;
+  }
+
+  .results {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+  max-width: 80%;
+  background-color: #f1f3f4;
+  padding: 20px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
 }
 
 @media (min-width: 576px) and (max-width: 767px) {
   header {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-self: center;
     margin: 0 auto;
     border-bottom: 1px solid rgba(128, 128, 128, 0.2);
@@ -525,6 +546,14 @@ main {
     left: 200px;
     bottom: 50%;
   }
+
+  .results-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 90%;
+}
 }
 
 @media (min-width: 768px) and (max-width: 991.98px) {
@@ -648,6 +677,14 @@ main {
     top: 50%;
     left: 45%;
     bottom: 50%;
+  }
+
+  .results-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  max-width: 60%;
   }
 }
 
