--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,11 @@ header {
   height: 60px;
 }
 
+.logo-text{
+  font-family: "Orbitron", sans-serif;
+  font-weight: bold;
+}
+
 .header-left {
   max-width: 90%;
   display: flex;
